WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282514
REGRESSION(
285694@main
): [CoordinatedGraphics] Tiling broken on zillow.com
https://bugs.webkit.org/show_bug.cgi?id=282514
Summary
REGRESSION(285694@main): [CoordinatedGraphics] Tiling broken on zillow.com
Michael Catanzaro
Reported
2024-11-03 14:18:57 PST
Created
attachment 473120
[details]
Screenshot Tiling is broken on zillow.com maps since 2.47.1. See attached screenshot.
Attachments
Screenshot
(526.43 KB, image/png)
2024-11-03 14:18 PST
,
Michael Catanzaro
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2024-11-06 14:27:25 PST
Might be
bug #282404
Carlos Garcia Campos
Comment 2
2024-11-07 03:10:31 PST
4d92f5fd6e60dd6bd687da9025b51172ab792c73 is the first bad commit Looking...
Carlos Garcia Campos
Comment 3
2024-11-07 06:20:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36325
Michael Catanzaro
Comment 4
2024-11-07 10:02:05 PST
***
Bug 282440
has been marked as a duplicate of this bug. ***
Miikka
Comment 5
2024-11-08 00:03:45 PST
Just to inform you: The pull request 36325 fixed multiple strange "ghost" overlay issues with different sites when I was using with Gnome Web/Epiphany and WebKitGTK (git version/2.47.1). For instance, with Matrix Element Web: when I changed the "space", the old space's room list was still above the new space's room list as a translucent layer (the old room list can't be clicked and it was not detected by the Developer Tools, but it was displayed even it shouldn't). And then I had some weirdness with Microsoft Team's and Element Web's input text areas: If I removed the text I had typed from the input text area, changed the chat/room, and came back to the previous room, the removed text appeared again in the input box (partly, though), and that text can't be removed and it was not detected by the Developer Tools either, so it was some rendering issue I guess? And what was even worse: When I was typing new text, it appeared behind of that old "non-existent" text... But with that commit/pull request those are gone now, thank you very much!
EWS
Comment 6
2024-11-08 00:32:33 PST
Committed
286321@main
(6bc3466dad2b): <
https://commits.webkit.org/286321@main
> Reviewed commits have been landed. Closing PR #36325 and removing active labels.
Michael Catanzaro
Comment 7
2024-11-11 08:35:07 PST
***
Bug 282404
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug