REGRESSION(285694@main): [CoordinatedGraphics] Tiling broken on zillow.com https://bugs.webkit.org/show_bug.cgi?id=282514

Reviewed by Miguel Gomez.

When a layer no longer has a backing store it has to be removed from
the backing stores map.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:
(WebKit::CoordinatedGraphicsScene::updateSceneState):

Canonical link: https://commits.webkit.org/286321@main